# react-native-prose-editor

./: .editorconfig  .gitignore  .prettierrc  CHANGELOG.md  README.md  babel.config.js  expo-module.config.json  jest.config.cjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
android/: build.gradle
docs/: README.md
docs/development/: workflow.md
docs/explanations/: architecture.md  design-decisions.md
docs/guides/: getting-started.md  installation.md  mentions.md  styling.md  toolbar-setup.md
example/: App.tsx  README.md  app.config.ts  app.json  constants.ts  metro.config.js  package-lock.json  package.json  sharedStyles.ts  themePresets.ts  tsconfig.json
example/ios/: Podfile
ios/: EditorAddons.swift  EditorLayoutManager.swift  EditorTheme.swift  Generated_editor_core.swift  NativeEditorExpoView.swift  NativeEditorModule.swift  NativeProseViewerExpoView.swift  PositionBridge.swift  ReactNativeProseEditor.podspec  RenderBridge.swift  RichTextEditorView.swift  editor_coreFFI.h
ios-tests/: .device-test.env.example  .gitignore  Podfile  project.yml
rust/: build-android.sh  build-ios.sh  generate-bindings.sh
rust/editor-core/fuzz/: Cargo.toml
rust/editor-core/fuzz/fuzz_targets/: position_map.rs
scripts/: prepare-publish.sh  run-android-on-device.sh  run-ios-on-device.sh  run-ios-tests.sh  sync-version.mjs
src/: EditorTheme.ts  EditorToolbar.tsx  NativeEditorBridge.ts  NativeProseViewer.tsx  NativeRichTextEditor.tsx  YjsCollaboration.ts  addons.ts  index.ts  schemas.ts  useNativeEditor.ts
(+128 files in other folders)
